--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme Name: MASHING UP
 Description: This is the theme for MASHING UP.
 Author: MASHING UP
 Author URI:
-Version: 1.0
+Version: {release version}
 */
 
 
