Change theme name.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
-Theme Name: MASHING UP
-Description: This is the theme for MASHING UP.
+Theme Name: BEYOND MILLENNIALS
+Description: This is the theme for BEYOND MILLENNIALS.
 Author: MASHING UP
 Author URI:
 Version: {release version}
