--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*
-Theme Name: MASHING UP
-Description: This is the theme for MASHING UP.
+Theme Name: BEYOND MILLENNIALS
+Description: This is the theme for BEYOND MILLENNIALS.
 Author: MASHING UP
 Author URI:
 Version: {release version}
