--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,11 @@
 @charset "utf-8";
 /*
-Theme Name: BEYOND MILLENNIALS
-Description: This is the theme for BEYOND MILLENNIALS.
-Author: MASHING UP
+Theme Name: Beyond Millennials 2020
+Description: This is the theme for Beyond Millennials 2020.
+Author: Beyond Millennials 2020
 Author URI:
-Version: {release version}
+Version: 1.0
 */
-
 
 @import '_reset.scss';
 
