tweak modal style

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -229,7 +229,6 @@
 		position: relative;
 		z-index: 1;
 		@media screen and ( max-width: 782px ) {
-			padding-top: 40px;
 			padding-bottom: 25px;
 		}
 		.image {
@@ -315,6 +314,9 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		@media screen and ( max-width: 782px ) {
+			padding-bottom: 30px;
+		}
 		.shares-title {
 			margin-right: 14px;
 			font-family: 'Montserrat', sans-serif;
@@ -322,6 +324,7 @@
 			font-size: 26px;
 			@media screen and ( max-width: 782px ) {
 				margin-right: 7px;
+				font-size: 20px;
 			}
 		}
 		ul {
