--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme Name: Beyond Millennials 2020
 Description: This is the theme for Beyond Millennials 2020.
 Author: Beyond Millennials 2020
 Author URI:
-Version: 1.0
+Version: {release version}
 */
 
 @import '_reset.scss';
