--- a/style.css
+++ b/style.css
@@ -5862,6 +5862,10 @@ body .a2a_kit {
   }
 }
 
+.mailmagazine .mailmagazine-form {
+  margin-top: 30px;
+}
+
 .top-sponsors {
   margin-top: 82px;
 }
