correct mail magazine area

--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -611,6 +611,7 @@
 		}
 		iframe {
 			width: 100%;
+			max-width: 100%;
 		}
 	}
 }
@@ -808,6 +809,7 @@
 
 	.mailmagazine-form {
 		margin-top: 30px;
+		padding: 0 25px;
 	}
 }
 
