--- a/style.css
+++ b/style.css
@@ -5600,14 +5600,15 @@ body .a2a_kit {
 }
 
 .top-buy .top-buy-body {
-  padding: 0 76px;
+  margin: 0 76px;
+  background-color: #fff;
   position: relative;
   z-index: 3;
 }
 
 @media screen and (max-width: 782px) {
   .top-buy .top-buy-body {
-    padding: 0 25px;
+    margin: 0 25px;
   }
 }
 
