--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -813,3 +813,55 @@ body .a2a_kit {
 		transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
 	}
 }
+
+.curtain-action {
+	position: relative;
+	z-index: 1;
+	&.is-inview {
+		.curtain-content {
+			opacity: 1;
+			transition-delay: 1.05s;
+		}
+		span {
+			animation: curtain-action 1.4s;
+			& + span {
+				top: 50%;
+				animation-delay: 0.3s;
+			}
+		}
+	}
+	.curtain-content {
+		opacity: 0;
+		position: relative;
+	}
+	span {
+		position: absolute;
+		top: 0;
+		height: 50%;
+		background-color: #eee;
+	}
+}
+
+@keyframes curtain-action {
+	from { left: 0; right: 100%; }
+	40% { left: 0; right: 0; }
+	60% { left: 0; right: 0; }
+	to { left: 100%; right: 0; }
+}
+
+.is-shrink {
+	& > svg,
+	.brick {
+		opacity: 0;
+		position: relative;
+		top: 50px;
+		transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
+	}
+	&.is-inview {
+		& > svg,
+		.brick {
+			opacity: 1;
+			top: 0;
+		}
+	}
+}
