apply responsive hero

--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -21,7 +21,7 @@
 		left: 50%;
 		transform: translateX(-50%);
 		z-index: 2;
-		width: 1364px;
+		width: 100%;
 		@media screen and ( max-width: 782px ) {
 			display: none;
 		}
