--- a/style.css
+++ b/style.css
@@ -4957,7 +4957,7 @@ body .a2a_kit {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 2;
-  width: 1364px;
+  width: 100%;
 }
 
 @media screen and (max-width: 782px) {
