--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -508,13 +508,14 @@ iframe, video, object{
 
 .get-tickets {
 	position: fixed;
-	right: 20%;
+	right: 76px;
 	bottom: 50px;
 	z-index: 2;
 	transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
 	@media screen and ( max-width: 782px ) {
-		right: 30px;
+		right: auto;
 		bottom: 0;
+		left: 30px;
 	}
 	&.is-inview {
 		bottom: 100px;
