--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -628,13 +628,23 @@
 	}
 	.speakers-list {
 		width: 1115px;
+		@media screen and ( max-width: 782px ) {
+			width: auto;
+		}
 		&.medium {
 			ul {
 				margin: 0 0 0 -51px;
 				justify-content: flex-start;
+				@media screen and ( max-width: 782px ) {
+					margin-left: 0;
+					padding: 0 13px;
+				}
 			}
 			li {
 				padding-left: 51px;
+				@media screen and ( max-width: 782px ) {
+					padding: 0 12px;
+				}
 				.image {
 					margin: 0;
 				}
