hide overflow area

--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -331,6 +331,7 @@ iframe, video, object{
 	border-top: 1px solid #000;
 	color: #fff;
 	background-color: #185f7d;
+	overflow-x: hidden;
 	position: relative;
 	z-index: 1;
 	@media screen and ( max-width: 782px ) {
