MGBM-18 5 sp buytickets css

--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -521,7 +521,8 @@ iframe, video, object{
 	&.is-inview {
 		bottom: 100px;
 		@media screen and ( max-width: 782px ) {
-			bottom: 55px;
+			bottom: 35px;
+			left: 24px
 		}
 		a {
 			line-height: 1.1290;
