MGBM-30 共通設定＞ヘッダーの「開催日」

--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -95,6 +95,7 @@
 		@media screen and ( max-width: 782px ) {
 			padding-top: 15px;
 			width: 117px;
+			margin-left: 25px;
 		}
 		img {
 			display: block;
@@ -111,11 +112,13 @@
 		line-height: 1.125;
 		font-family: 'Heebo', sans-serif;
 		font-weight: 700;
-		font-size: 40px;
+		font-size: 35px;
 		@media screen and ( max-width: 782px ) {
-			top: 170px;
-			left: 15px;
-			font-size: 28px;
+			top: 20px;
+			left: auto;
+			right: 25px;
+			font-size: 19px;
+			text-align: right;
 		}
 	}
 }
