--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -41,164 +41,165 @@ iframe, video, object{
 	top: 0;
 	right: 0;
 	left: 0;
-	z-index: 2;
-	background-color: transparent;
-	opacity: 0;
+	z-index: 3;
+	background-color: #fff;
 	transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
-	&.is-top {
-		opacity: 1;
-		.home & {
-			.header-nav-toggle {
-				border-top-color: #fff;
-				&::before,
-				&::after {
-					background-color: #fff;
-				}
+	@media screen and ( min-width: 783px ) {
+		transform: translateY(-228px);
+	}
+	@media screen and ( max-width: 782px ) {
+	}
+	.home & {
+		@media screen and ( min-width: 783px ) {
+			transform: translateY(-228px);
+		}
+		.header-inner {
+			@media screen and ( min-width: 783px ) {
+				height: 228px;
 			}
-			.header-nav {
-				li {
-					&.current-menu-item {
+		}
+		.header-nav {
+			li {
+				&.current-menu-item {
+					&:not( :first-child ) {
 						a {
-							color: #fff;
-							&:hover, &:active {
-								color: #0148c6;
+							&::before {
+								display: none;
+							}
+							span {
+								&::before {
+									display: none;
+								}
 							}
 						}
 					}
 				}
 			}
 		}
-	}
-	.home &{
-		.header-nav {
-			li {
-				a {
-					color: #fff;
-					&:hover, &:active {
-						color: #0148c6;
-					}
+		&.is-top {
+			@media screen and ( max-width: 782px ) {
+				background-color: transparent;
+			}
+			.header-inner {
+				@media screen and ( min-width: 783px ) {
+					justify-content: center;
 				}
-				&.current-menu-item {
-					a {
-						color: #fff;
-					}
+			}
+			.header-nav-logo {
+				display: none;
+			}
+			&.is-show {
+				background-color: transparent;
+			}
+		}
+		&.is-show {
+			@media screen and ( min-width: 783px ) {
+				transform: translateY(-155px);
+			}
+			&.is-top {
+				@media screen and ( min-width: 783px ) {
+					transform: translateY(0);
 				}
 			}
 		}
 	}
-	&.is-fixed {
+	&.is-show {
 		background-color: #fff;
-		opacity: 1;
-		.header-logo {
-			svg {
-				fill: #000
-			}
+		@media screen and ( min-width: 783px ) {
+			transform: translateY(-155px);
 		}
-		.header-nav {
-			li {
-				a {
-					color: #000;
-					&.current-menu-item {
-						a {
-							color: #000;
-						}
-					}
-				}
-			}
-		}
-		.header-date {
-			color: #939;
-		}
-		.home & {
-			.header-logo {
-				svg {
-					fill: #000
-				}
-			}
-			.header-nav {
-				li {
-					a {
-						color: #000;
-						&:hover, &:active {
-							color: #0148c6;
-						}
-					}
-				}
-			}
-			.header-date {
-				color: #939;
-			}
-		}
-	}
-	.is-popup & {
-		background-color: #fff;
 	}
 
 	.header-inner {
 		box-sizing: border-box;
 		margin: 0 auto;
-		padding-right: 30px;
-		padding-left: 28px;
 		display: flex;
-		align-items: center;
-		max-width: 1366px;
-		height: 94px;
-		@media screen and ( max-width: 1000px ) {
-			padding-right: 20px;
-			padding-left: 18px;
-		}
+		flex-wrap: wrap;
+		max-width: 1064px;
 		@media screen and ( max-width: 782px ) {
-			padding-right: 15px;
-			padding-left: 15px;
-			min-height: 0;
-			height: 59px;
+			height: 50px;
 		}
 	}
 
 	.header-logo {
-		width: 114px;
-		opacity: 1;
-		transition: all 800ms cubic-bezier(0.42, 0, 0.58, 1);
+		padding-top: 42px;
+		width: 100%;
 		@media screen and ( max-width: 782px ) {
-			display: none;
+			padding-top: 13px;
 		}
-		&.is-wait {
-			opacity: 0;
-		}
-		@media screen and ( max-width: 1200px ) {
-			width: 86px;
-		}
-		a, svg {
+		a, img {
 			display: block;
 		}
-		svg {
-			.home  & {
-				fill: #fff;
+		a {
+			margin: 0 auto;
+			width: 215px;
+			@media screen and ( max-width: 782px ) {
+				width: 59px;
 			}
 		}
 	}
 
 	.header-nav {
-		opacity: 1;
+		display: flex;
+		align-items: flex-start;
 		transition: all 800ms cubic-bezier(0.42, 0, 0.58, 1);
-		overflow: hidden;
-		position: relative;
-		z-index: 1;
-		&.is-wait {
-			opacity: 0;
+		.header-nav-inner {
+			display: flex;
+			transition: all 800ms cubic-bezier(0.42, 0, 0.58, 1);
+			overflow: hidden;
+			position: relative;
+			z-index: 1;
+			@media screen and ( max-width: 782px ) {
+				padding-top: 75px;
+				display: none;
+			}
 		}
-		@media screen and ( max-width: 782px ) {
-			display: none;
+		.header-nav-logo {
+			padding-top: 18px;
+			padding-right: 42px;
+			padding-bottom: 12px;
+			width: 90px;
+			@media screen and ( max-width: 782px ) {
+				margin: 0 auto;
+				padding: 13px 0 0;
+				width: 59px;
+			}
+			a, img {
+				display: block;
+			}
+			@media screen and ( max-width: 782px ) {
+				display: none;
+				position: absolute;
+				top: 0;
+				right: 0;
+				left: 0;
+				z-index: 3;
+				margin: 0;
+				padding-top: 15px;
+				width: 100%;
+				background-color: #fff;
+				a, img {
+					display: block;
+				}
+				a {
+					margin: 0 auto;
+					width: 118px;
+				}
+			}
 		}
 		ul {
+			padding: 20px 0;
 			display: flex;
 			align-items: center;
+			@media screen and ( max-width: 782px ) {
+				display: block;
+			}
 		}
 		li {
-			margin-left: 40px;
+			margin: 0 20px;
 			font-family: 'Heebo', sans-serif;
 			font-weight: 700;
-			font-size: 16px;
+			font-size: 18px;
 			@media screen and ( max-width: 1200px ) {
 				margin-left: 30px;
 			}
@@ -210,13 +211,25 @@ iframe, video, object{
 				margin-left: 12px;
 				font-size: 12px;
 			}
+			@media screen and ( max-width: 782px ) {
+				margin: 0;
+				border-bottom: 1px solid #eee;
+				font-size: 18px;
+				opacity: 0;
+				&:last-child {
+					border-bottom: 0;
+				}
+			}
 			a {
 				display: block;
 				text-decoration: none;
 				position: relative;
 				z-index: 1;
+				@media screen and ( max-width: 782px ) {
+					padding: 21px 25px;
+				}
 				&:hover, &:active {
-					color: #0148c6;
+					color: #000;
 				}
 				.is-popup & {
 					color: #000;
@@ -224,83 +237,226 @@ iframe, video, object{
 			}
 			&.current-menu-item {
 				a {
-					color: #0148c6;
+					color: #000;
+					&::before {
+						content: '';
+						position: absolute;
+						right: 0;
+						bottom: 0;
+						left: 0;
+						height: 3px;
+						background-color: #000;
+						@media screen and ( max-width: 782px ) {
+							display: none;
+						}
+					}
+					span {
+						position: relative;
+						z-index: 1;
+						&::before {
+							@media screen and ( max-width: 782px ) {
+								content: '';
+								position: absolute;
+								right: 0;
+								bottom: 0;
+								left: 0;
+								height: 2px;
+								background-color: #000;
+							}
+						}
+					}
 				}
 			}
 		}
 		.nav-stalker {
 			position: absolute;
 			left: -100px;
-			bottom: 0;
+			bottom: 20px;
 			width: 100px;
 			height: 3px;
-			background-color: #0148c6;
+			background-color: #000;
 			transition: all .3s ease;
-		}
-	}
-
-	.header-misc {
-		margin-left: auto;
-		opacity: 1;
-		transition: all 800ms cubic-bezier(0.42, 0, 0.58, 1);
-		@media screen and ( max-width: 782px ) {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			width: 100%;
-		}
-		&.is-wait {
-			opacity: 0;
-		}
-	}
-
-	.header-date {
-		color: #939;
-		font-family: 'Arvo', serif;
-		font-size: 30px;
-		.home & {
-			color: #9fc;
-		}
-		.is-popup & {
-			color: #939;
-		}
-		@media screen and ( max-width: 1250px ) {
-			font-size: 24px;
-		}
-		@media screen and ( max-width: 950px ) {
-			font-size: 20px;
+			@media screen and ( max-width: 782px ) {
+				display: none;
+			}
 		}
 	}
 
 	.header-nav-toggle {
-		padding: 21px 32px 0 0;
-		border-top: 2px solid #000;
+		position: absolute;
+		top: 18px;
+		right: 25px;
+		z-index: 5;
+		padding: 14px 25px 0 0;
 		display: none;
-		width: 0;
-		height: 0;
-		overflow: hidden;
-		position: relative;
 		@media screen and ( max-width: 782px ) {
 			display: block;
 		}
-		&::before,
-		&::after {
-			content: '';
+		span {
 			position: absolute;
-			width: 32px;
+			width: 25px;
 			height: 2px;
 			background-color: #000;
+			transition: all 200ms ease-out;
+			&.nav-01 {
+				top: 0;
+			}
+			&.nav-02 {
+				top: 6px;
+			}
+			&.nav-03 {
+				top: 12px;
+			}
 		}
-		&::before {
-			top: 6px;
+		&.is-show {
+			span {
+				&.nav-01 {
+					top: 8px;
+				}
+				&.nav-03 {
+					top: 8px;
+				}
+			}
 		}
-		&::after {
-			top: 14px;
+
+		.collapse{
+			transition: all 70ms ease-out;
+		}
+
+		.rotate30{
+			transform: rotate(30deg);
+			transition: all 50ms ease-out;
+		}
+		.rotate150{
+			transform: rotate(150deg);
+			transition: all 50ms ease-out;
+		}
+
+		.rotate45{
+			transform: rotate(45deg);
+			transition: all 100ms ease-out;
+		}
+		.rotate135{
+			transform: rotate(135deg);
+			transition: all 100ms ease-out;
 		}
 	}
 
+	.circle {
+		@media screen and ( max-width: 782px ) {
+			position:absolute;
+			top: 22px;
+			right: 34px;
+			border-radius: 100%;
+			width: 0;
+			height: 0;
+			background: #fff;
+			opacity: 0;
+			transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
+			&.expand {
+				top: -560px;
+				right: -560px;
+				width: 1200px;
+				height: 1200px;
+				opacity: 1;
+			}
+		}
+	}
 }
 
+body.is-nav-show {
+	position: fixed;
+	.header {
+		@media screen and ( max-width: 782px ) {
+			height: 100%;
+		}
+		.header-inner {
+			@media screen and ( max-width: 782px ) {
+				height: auto;
+				position: absolute;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+			}
+		}
+		.header-nav {
+			.header-nav-inner {
+				@media screen and ( max-width: 782px ) {
+					box-sizing: border-box;
+					position: absolute;
+					top: 0;
+					right: 0;
+					bottom: 0;
+					left: 0;
+					display: block;
+					width: 100%;
+					overflow-y: scroll;
+				}
+			}
+			.header-nav-logo {
+				@media screen and ( max-width: 782px ) {
+					display: block;
+				}
+			}
+			li {
+				@media screen and ( max-width: 782px ) {
+					&:nth-child(1) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 100ms 1 forwards;
+					}
+					&:nth-child(2) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 200ms 1 forwards;
+					}
+					&:nth-child(3) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 300ms 1 forwards;
+					}
+					&:nth-child(4) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 400ms 1 forwards;
+					}
+					&:nth-child(5) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 500ms 1 forwards;
+					}
+					&:nth-child(6) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 600ms 1 forwards;
+					}
+					&:nth-child(7) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 700ms 1 forwards;
+					}
+					&:nth-child(8) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 800ms 1 forwards;
+					}
+					&:nth-child(9) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 900ms 1 forwards;
+					}
+					&:nth-child(10) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1000ms 1 forwards;
+					}
+					&:nth-child(11) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1100ms 1 forwards;
+					}
+					&:nth-child(12) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1200ms 1 forwards;
+					}
+					&:nth-child(13) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1300ms 1 forwards;
+					}
+					&:nth-child(14) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1400ms 1 forwards;
+					}
+					&:nth-child(15) {
+						animation: nav_fade 0.5s cubic-bezier(0.42, 0, 0.58, 1) 1500ms 1 forwards;
+					}
+				}
+			}
+		}
+	}
+}
+
+@keyframes nav_fade {
+	100% {
+		opacity: 1;
+	}
+}
 
 .content {
 	display: block;
@@ -328,7 +484,6 @@ iframe, video, object{
 .footer {
 	padding-top: 76px;
 	padding-bottom: 110px;
-	border-top: 1px solid #000;
 	color: #fff;
 	background-color: #185f7d;
 	overflow-x: hidden;
@@ -542,122 +697,6 @@ iframe, video, object{
 		}
 		&:hover, &:active {
 			text-decoration: none;
-		}
-	}
-}
-
-body.is-nav-show {
-	position: fixed;
-}
-
-.drawer {
-	display: none;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	z-index: 2;
-	padding-top: 63px;
-	width: 100%;
-	background-color: #000;
-	transform: translateX(-100%);
-	transition: all 500ms cubic-bezier(0.42, 0, 1, 1);
-	@media screen and (max-width: 782px) {
-		display: block;
-	}
-	&.is-show {
-		transform: translateX(0%);
-		& + .container {
-			transform: translateX(100%);
-		}
-	}
-	.drawer-logo {
-		position: absolute;
-		top: 17px;
-		right: 15px;
-		a, svg {
-			display: block;
-		}
-		svg {
-			fill: #fff;
-		}
-		a {
-			width: 67px;
-			height: 38px;
-		}
-	}
-	.drawer-close {
-		position: absolute;
-		top: 17px;
-		left: 18px;
-		padding: 26px 28px 0 0;
-		width: 0;
-		height: 0;
-		overflow: hidden;
-		&::before,
-		&::after {
-			content: '';
-			position: absolute;
-			top: -5px;
-			left: 13px;
-			width: 2px;
-			height: 36px;
-			background-color: #fff;
-		}
-		&::before {
-			transform: rotate(45deg);
-		}
-		&::after {
-			transform: rotate(-45deg);
-		}
-	}
-	.drawer-content {
-		box-sizing: border-box;
-		padding: 40px 23px 30px;
-		height: 100%;
-		overflow-y: scroll;
-	}
-	.drawer-nav {
-		li {
-			margin-bottom: 12px;
-			font-family: 'Heebo', sans-serif;
-			font-weight: 700;
-			font-size: 26px;
-			a {
-				display: block;
-				color: #fff;
-				text-decoration: none;
-			}
-		}
-	}
-	.drawer-tickets {
-		a {
-			padding: 5px 0;
-			display: block;
-			width: 295px;
-			background-color: #fff;
-			font-family: 'Heebo', sans-serif;
-			font-weight: 700;
-			font-size: 33px;
-			text-decoration: none;
-			text-transform: uppercase;
-			text-align: center;
-			animation: colorful 6s infinite;
-			@media screen and (max-width: 339px) {
-				width: 100%;
-			}
-			span {
-				position: relative;
-				z-index: 1;
-				&::after {
-					content: '';
-					position: absolute;
-					right: 0;
-					bottom: 5px;
-					left: 0;
-					height: 1px;
-					background-color: #000;
-				}
-			}
 		}
 	}
 }
